--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>JS DOM Lab</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
      <header>
        <nav id="top-menu"></nav>
+       <nav id="sub-menu"></nav>
      </header>
      <main></main>
      <script src="script.js"></script>
